# airllama

./: .env.example  .gitignore  Dockerfile  EVALUATION_REPORT.md  QUICKSTART.md  README.md  TESTING_SUMMARY.md  airllm.py  airllm_cli.py  allpackages.txt  cli.py  pyproject.toml  requirements.txt  test_prompt.py  test_server.py
app/: __init__.py  config.py  main.py
app/routers/: ollama.py  openai_compat.py
app/schemas/: ollama.py  openai.py
app/services/: __init__.py  generation.py  model_manager.py
